syntax = "proto3";

package P2PFileSync;
message ProtoHelloMessage {
  
}